# rust-passport-azure-ad

./: .gitignore  Cargo.toml  LICENSE  README.md
src/: aadutils.rs  bearer_strategy.rs  constants.rs  error.rs  json_web_token.rs  jwe.rs  lib.rs  metadata.rs  middleware.rs  types.rs  util.rs  verifier.rs
src/types/: enums.rs
tests/: msal_test.rs  test_error.rs
