[package]
name = "passport_azure_ad"
version = "0.1.0"
edition = "2021"

[[test]]
name = "passport_azure_ad-test"
path = "src/tests.rs"

[dependencies]
serde = { version = "1.0.163", features = ["derive"] }
serde_json = "1.0.96"
jws = "0.2.7"
regex = "1.8.3"
url = "2.3.1"
reqwest = { version = "0.11.18", features = ["json"] }
alcoholic_jwt = "4091.0.0"
tokio = { version = "1.28.2", features = ["macros"] }
dotenvy = "0.15.7"
