[package]
name = "passport_azure_ad"
authors = ["Fabio Cammilli <fabio.cammilli@protonmail.com>"]
categories = ["authentication", "web-programming"]
description = "JWT bearer token validation and verification towards Microsoft Azure AD"
documentations = "https://github.com/lincemiope/rust-passport-azure-ad"
keywords = ["MSAL", "JWT", "Bearer", "web", "token"]
license = "MIT"
readme = "README.md"
repository = "https://github.com/lincemiope/rust-passport-azure-ad"
version = "0.1.3"
edition = "2021"

[dependencies]
serde = { version = "1.0.193", features = ["derive"] }
serde_json = "1.0.108"
jws = "0.2.9"
regex = "1.10.2"
url = "2.5.0"
reqwest = { version = "0.11.22", features = ["json"] }
alcoholic_jwt = "4091.0.0"
memory-cache-rs = "0.2.0"
